# PiePayMon

./: .editorconfig  .env-example  .envrc  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  treefmt.toml
flake/apps/: default.nix
flake/devshells/: default.nix
flake/formatter/: default.nix
flake/uv2nix/: default.nix
src/piepaybot/: __init__.py  bot.py  client.py  crypto.py  logger.py  offers.py  session.py
src/piepaymon/: __init__.py  cli.py  client.py  config.py  logger.py  models.py  monitor.py  notif.py  offers.py  session.py
