[project]
name = "piepaybot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "cryptography>=44.0.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
]

[project.scripts]
piepaybot = "piepaybot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
