[project]
name = "piepaymon"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "colorlog>=6.9.0",
    "cryptography>=44.0.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "questionary>=2.1.0",
]

[project.scripts]
piepaymon = "piepaymon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
